<resources>
    <string name="app_name">Download time calculator</string>

    <string name="days">Day(s)</string>
    <string name="hours">Hour(s)</string>
    <string name="minutes">Minute(s)</string>
    <string name="seconds">Second(s)</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="lowTime">Less than an second</string>
    <string name="highTime">More than a year</string>
    <string name="noTime">Fill in the fields first!</string>

    <string name="size_bits" translatable="false">Bits (b)</string>
    <string name="size_bytes" translatable="false">Bytes (B)</string>
    <string name="size_KB" translatable="false">KByte (KB)</string>
    <string name="size_MB" translatable="false">MByte (MB)</string>
    <string name="size_GB" translatable="false">GByte (GB)</string>
    <string name="size_TB" translatable="false">TByte (TB)</string>
    <string name="size_Kb" translatable="false">Kbit (Kb)</string>
    <string name="size_Mb" translatable="false">Mbit (Mb)</string>
    <string name="size_Gb" translatable="false">Gbit (Gb)</string>
    <string name="size_Tb" translatable="false">Tbit (Tb)</string>
    <string name="size_KiB" translatable="false">Kibit (KiB)</string>
    <string name="size_MiB" translatable="false">Mibit (KiB)</string>
    <string name="size_GiB" translatable="false">Gibit (KiB)</string>
    <string name="size_TiB" translatable="false">Tibit (KiB)</string>

    <string name="vel_bit_s" translatable="false">bit/s (bps)</string>
    <string name="vel_byte_s" translatable="false">Byte/s (Bps)</string>
    <string name="vel_Kb_s" translatable="false">Kilobit/s (Kbps)</string>
    <string name="vel_KB_s" translatable="false">Kilobyte/s (KBps)</string>
    <string name="vel_Mb_s" translatable="false">Megabit/s (Mbps)</string>
    <string name="vel_MB_s" translatable="false">Megabyte/s (MBps)</string>
    <string name="vel_Gb_s" translatable="false">Gigabit/s (Gbps)</string>
    <string name="vel_GB_s" translatable="false">Gigabyte/s (GBps)</string>

    <string name="fileSize">File size</string>
    <string name="connectionSpeed">Connection Speed</string>
    <string name="errorMargin">Margin of error - %1$d%%</string>

</resources>
