<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputFileSizeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonFileSizeList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFileSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/fileSize"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:maxLines="1"
            tools:ignore="TouchTargetSizeCheck|TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonFileSizeList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/size_bits"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/inputFileSizeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputFileSizeLayout"
        app:layout_constraintTop_toTopOf="@+id/inputFileSizeLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputConnectionSpeedLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonConnectionSpeedList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFileSizeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputConnectionSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/connectionSpeed"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:maxLines="1"
            tools:ignore="TouchTargetSizeCheck|TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConnectionSpeedList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/vel_bit_s"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/inputConnectionSpeedLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputConnectionSpeedLayout"
        app:layout_constraintTop_toTopOf="@+id/inputConnectionSpeedLayout" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConnectionSpeedLayout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/errorMarginDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"
        android:text="@string/errorMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/marginErrorSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16sp"
        android:layout_marginHorizontal="8sp"
        android:max="50"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMarginDisplay" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8sp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marginErrorSlider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timeResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/noTime"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>